--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "devDependencies": {
-    "bootstrap-sass-official": "~3.3.3"
+    "bootstrap-sass-official": "~3.3.3",
+    "wp-bootstrap-navwalker": "https://github.com/twittem/wp-bootstrap-navwalker.git#~2.0.4"
   }
 }
