--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "bootstrap-sass-official": "~3.3.3",
-    "wp-bootstrap-navwalker": "https://github.com/twittem/wp-bootstrap-navwalker.git#~2.0.4"
+    "wp-bootstrap-navwalker": "https://github.com/twittem/wp-bootstrap-navwalker.git#~2.0.4",
+    "jquery-smooth-scroll": "~1.5.5"
   }
 }
