--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "bootstrap-sass-official": "~3.3.3",
     "wp-bootstrap-navwalker": "https://github.com/twittem/wp-bootstrap-navwalker.git#~2.0.4",
-    "jquery-smooth-scroll": "~1.5.5"
+    "jquery-smooth-scroll": "~1.5.5",
+    "angular": "~1.3.15"
   }
 }
